Fix custom FAQ uncollapsing and links on PyData Sphinx Theme

--- a/doc/_static/css/custom_styles.css
+++ b/doc/_static/css/custom_styles.css
@@ -301,8 +301,8 @@ a.dropdown-link {
   visibility: hidden;
 }
 
-details.dropdown:hover a.dropdown-link,
-details.dropdown:focus a.dropdown-link {
+details.sd-dropdown:hover a.dropdown-link,
+details.sd-dropdown:focus a.dropdown-link {
   visibility: visible;
 }
 
